Fix minor layout issues

--- a/events/static/events/css/raffle.scss
+++ b/events/static/events/css/raffle.scss
@@ -12,4 +12,8 @@
       font-size: 2rem;
     }
   }
+
+  .launch-raffle {
+    margin-top: 2rem;
+  }
 }
